# sync-service

./: sync-storage.code-workspace
doc/: README.MD
server/: Cargo.toml
server/cs/SyncService/: Assembly.cs  Program.cs  Startup.cs  appsettings.json
server/cs/SyncService/Controllers/: StoreController.cs
server/cs/SyncService/Properties/: launchSettings.json
server/cs/SyncService/Service/: FilesStorageService.cs  IStorageService.cs
server/src/: cors.rs  main.rs  store.rs
server/src/storage/: mem.rs  mod.rs
todo/: README.md  angular.json  package-lock.json  package.json
todo/src/: index.html  polyfills.ts
todo/src/app/: app.component.ts  app.module.ts
todo/src/app/entry/: entry.component.ts  entry.module.ts
todo/src/app/list/: list.module.ts
todo/src/app/list/list-page/: list-page.component.html  list-page.component.spec.ts  list-page.component.ts
todo/src/app/root/: app.component.ts
todo/src/app/shell/: shell.component.html  shell.component.scss  shell.component.ts
todo/src/config/development/: settings.json
todo/src/modules/settings/: index.ts  settings-loader.service.spec.ts  settings-loader.service.ts  settings.module.ts  type.ts
todo/src/modules/sync-storage/: client.service.spec.ts  client.service.ts  index.ts  sync-storage.module.ts
todo/src/styles/: _theme.scss  main.scss
